tests/snapshots/yaml_suite_snapshots__yaml_suite_CC74_tight.snap
---
source: tests/yaml_suite_snapshots.rs
expression: tight
---
- dump: "--- !<tag:example.com,2000:app/foo> \"bar\"\n"
  from: "http://www.yaml.org/spec/1.2/spec.html#id2783195"
  json: "\"bar\"\n"
  name: Spec Example 6.20. Tag Handles
  tags: spec directive tag unknown-tag
  tree: "+STR\n +DOC ---\n  =VAL <tag:example.com,2000:app/foo> \"bar\n -DOC\n-STR\n"
  yaml: "%TAG !e! tag:example.com,2000:app/\n---\n!e!foo \"bar\"\n"
