tests/snapshots/yaml_suite_snapshots__yaml_suite_CFD4_med.snap
---
source: tests/yaml_suite_snapshots.rs
expression: med
---
- name: Empty implicit key in single pair flow sequences
  from: "@perlpunk"
  tags: empty-key flow sequence
  yaml: "- [ : empty key ]\n- [: another empty key]\n"
  tree: "+STR\n +DOC\n  +SEQ\n   +SEQ []\n    +MAP {}\n     =VAL :\n     =VAL :empty key\n    -MAP\n   -SEQ\n   +SEQ []\n    +MAP {}\n     =VAL :\n     =VAL :another empty key\n    -MAP\n   -SEQ\n  -SEQ\n -DOC\n-STR\n"
  dump: "- - : empty key\n- - : another empty key\n"
