tests/snapshots/yaml_suite_snapshots__yaml_suite_CFD4_tight.snap
---
source: tests/yaml_suite_snapshots.rs
expression: tight
---
- dump: "- - : empty key\n- - : another empty key\n"
  from: "@perlpunk"
  name: Empty implicit key in single pair flow sequences
  tags: empty-key flow sequence
  tree: "+STR\n +DOC\n  +SEQ\n   +SEQ []\n    +MAP {}\n     =VAL :\n     =VAL :empty key\n    -MAP\n   -SEQ\n   +SEQ []\n    +MAP {}\n     =VAL :\n     =VAL :another empty key\n    -MAP\n   -SEQ\n  -SEQ\n -DOC\n-STR\n"
  yaml: "- [ : empty key ]\n- [: another empty key]\n"
