tests/snapshots/yaml_suite_snapshots__yaml_suite_CN3R_med.snap
---
source: tests/yaml_suite_snapshots.rs
expression: med
---
- name: Various location of anchors in flow sequence
  from: "@perlpunk"
  tags: anchor flow mapping sequence
  yaml: "&flowseq [\n a: b,\n &c c: d,\n { &e e: f },\n &g { g: h }\n]\n"
  tree: "+STR\n +DOC\n  +SEQ [] &flowseq\n   +MAP {}\n    =VAL :a\n    =VAL :b\n   -MAP\n   +MAP {}\n    =VAL &c :c\n    =VAL :d\n   -MAP\n   +MAP {}\n    =VAL &e :e\n    =VAL :f\n   -MAP\n   +MAP {} &g\n    =VAL :…"
  json: "[\n  {\n    \"a\": \"b\"\n  },\n  {\n    \"c\": \"d\"\n  },\n  {\n    \"e\": \"f\"\n  },\n  {\n    \"g\": \"h\"\n  }\n]\n"
  dump: "&flowseq\n- a: b\n- &c c: d\n- &e e: f\n- &g\n  g: h\n"
