tests/snapshots/yaml_suite_snapshots__yaml_suite_CN3R_tight.snap
---
source: tests/yaml_suite_snapshots.rs
expression: tight
---
- dump: "&flowseq\n- a: b\n- &c c: d\n- &e e: f\n- &g\n  g: h\n"
  from: "@perlpunk"
  json: "[\n  {\n    \"a\": \"b\"\n  },\n  {\n    \"c\": \"d\"\n  },\n  {\n    \"e\": \"f\"\n  },\n  {\n    \"g\": \"h\"\n  }\n]\n"
  name: Various location of anchors in flow sequence
  tags: anchor flow mapping sequence
  tree: "+STR\n +DOC\n  +SEQ [] &flowseq\n   +MAP {}\n    =VAL :a\n    =VAL :b\n   -MAP\n   +MAP {}\n    =VAL &c :c\n    =VAL :d\n   -MAP\n   +MAP {}\n    =VAL &e :e\n    =VAL :f\n   -MAP\n   +MAP {} &g\n    =VAL :g\n    =VAL :h\n   -MAP\n  -SEQ\n -DOC\n-STR\n"
  yaml: "&flowseq [\n a: b,\n &c c: d,\n { &e e: f },\n &g { g: h }\n]\n"
